--- a/mission-01/term.html
+++ b/mission-01/term.html
@@ -11,14 +11,14 @@
     <article class="box">
     <h3>웹 관련 용어</h3>
     <dl>
-            <dt class="tit01">웹 표준 이란?</dt>
-            <dd class="txt01">W3C 단체에서 규정한 웹 기술 사양에 대한 규칙을 말하면 표준 규칙은...</dd>
-            <dd class="tnt01"><img src="web_standards.png" alt="W3C" /></dd>
+            <dt class="title01">웹 표준 이란?</dt>
+            <dd class="text01">W3C 단체에서 규정한 웹 기술 사양에 대한 규칙을 말하면 표준 규칙은...</dd>
+            <dd class="img01"><img src="web_standards.png" alt="W3C" /></dd>
     
     
-            <dt class="tit02">웹 표준 이란?</dt>
-            <dd class="txt02">W3C 단체에서 규정한 웹 기술 사양에 대한 규칙을 말하면 표준 규칙은 ...</dd>
-            <dd class="tnt02"><img src="web_standards.png" alt="W3C" /></dd>      
+            <dt class="title02">웹 표준 이란?</dt>
+            <dd class="text02">W3C 단체에서 규정한 웹 기술 사양에 대한 규칙을 말하면 표준 규칙은 ...</dd>
+            <dd class="img02"><img src="web_standards.png" alt="W3C" /></dd>      
     </dl>
 </article>
 </body>
