--- a/mission-02/login.html
+++ b/mission-02/login.html
@@ -15,7 +15,7 @@
         <h1 class="login-title">로그인</h1>
         <div class="login-wrapper">
         <div class="login-group">
-            <form action="https://formspree.io/f/mnqykglp" method="POST">
+            <form action="/" method="POST">
             <fieldset>
                 <legend>로그인</legend>
                 <div class="login-form">
