--- a/mission-04/grid.html
+++ b/mission-04/grid.html
@@ -15,7 +15,7 @@
             <p class="news-detail">디자인 및 다양한 view 환경을 고려하여 구성되어 있으며, 
                 기존보다 최신 정보 및 개발자를 위한 기술 가이드도 찾기 쉽도록 구성되어 있습니다.</p>
             <figure class="news-img">
-                <img src="./news.png" alt="W3C 리뉴얼 페이지 미리보기" />
+                <img src="./news.png" alt="W3C 리뉴얼 페이지" />
                 <figcaption>W3C 리뉴얼</figcaption>
             </figure>
         </div>
