--- a/mission-04/grid.html
+++ b/mission-04/grid.html
@@ -9,16 +9,16 @@
 <body>
     <section class="news">
         <h2 class="news-title">새소식</h2>
-        <div class="news-board">
+        <section class="news-board">
             <h3 class="news-highlight">W3C 사이트가 리뉴얼 되었습니다.</h3>
-            <p class="news-time">2022.07.18</p>
+            <time class="news-time">2022.07.18</time>
             <p class="news-detail">디자인 및 다양한 view 환경을 고려하여 구성되어 있으며, 
                 기존보다 최신 정보 및 개발자를 위한 기술 가이드도 찾기 쉽도록 구성되어 있습니다.</p>
             <figure class="news-img">
                 <img src="./news.png" alt="W3C 리뉴얼 페이지" />
                 <figcaption>W3C 리뉴얼</figcaption>
             </figure>
-        </div>
+        </section>
         <a href="/" class="news-link" target="_blank" rel="noopener noreferrer"><span>+</span>더보기</a>
     </section>
 </body>
